       * Inventory: improve POD documentation
       * Inventory: Display a debug message if the STORAGES/INTERFACE is invalid
       * backport from master FusionInventory::Agent::Tools::getCanonicalManufacturer()
       * Linux/CPU rename AuthenticAMD to AMD
       * injector: --help show usage menu
       * injector: minor clean up in the --help menu
       * Add 2011 in the copyright years

2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
       * RPC: Better message if access is denied
       * add --no-p2p parameter
         http://forge.fusioninventory.org/issues/507
       * initialize $config->{'rpc-trust-localhost'} to avoid a warning
         with --help
       * injector: fix the --help, there is no default server
       * fusioninventory-agent, do not load lib with use to be able to change the @INC first.
         this is needed for AIX 6.1 prebuilt.
       * AIX/CPU: use addCPU() and collect the CORE/THREAD
       * AIX/hardware: fix a typo sysplanar0 instead of sysplana00
       * AIX/storage: reinitialise temp var correctly
       * AIX/storage: store the harddrive serial number
       * AIX/storage: use addStroage
       * AIX/user: use addUser()
       * Big Oops, CPUID != CPU serial number, see:
         http://en.wikipedia.org/wiki/CPUID
         Revert commit a1c4c665, which is broken because of that:
         Win32: try to identify dual core CPU even if Windows thinks it two physical CPU
       * Linux/resolution: fix the parsing for Nouveau, than Remi Collet
       * Linux: improve the Harddrive detection if lshal is not avalaible,
         thanks Bernhard DENNER for the initial patch
         https://bugs.launchpad.net/bugs/682689
       * No warning if ddcprobe is not avalaible

2.1.7_beta1  Fri, 19 Nov 2010 14:15:08 +0100
       * replace Cwd::abs_path with File::Spec->rel2abs
         abs_path fails if the directory doesn't exist yet. This was breaking
         --basevardir on UNIX system.